Address PR changes. Fix text overflow for long words.

--- a/src/styles/_controls.scss
+++ b/src/styles/_controls.scss
@@ -461,6 +461,14 @@ input[type=number].c-input-number--no-spinners {
     }
 }
 
+.c__scrollContainer{
+    @include nice-input();
+    margin-top: $interiorMargin;
+    background: $scrollContainer;
+    border-radius: $controlCr;
+    overflow: auto;
+}
+
 // SELECTS
 select {
     @include appearanceNone();
